Se logra el menu lateral

--- a/index.html
+++ b/index.html
@@ -14,17 +14,48 @@
 		<!-- Header -->
 		<div data-role="header" data-position="inline">
 			<h1>Manual Js</h1>
+			<a href="#mypanel" data-icon="bars" class="ui-btn-icon-right">Menù</a>
 		</div>
 		<!-- Nav -->
-		<div data-role="navbar">
+		<div data-role="panel" id="mypanel" data-display="overlay"
+			data-position="left" >
+			<ul data-role="listview" data-inset="true">
+				<li data-role="list-divider">Menù</li>
+				<li>
+					<a href="index.html" target="_self">Indice</a>
+				</li>
+				<li>
+					<a href="index.html" target="_self">Acerca</a>
+				</li>
+				<li>
+					<a href="index.html" target="_self">Hecho por:</a>
+				</li>
+			</ul>
+			<a href="#pageone" data-rel="close" data-role="button">Cerrar</a>
+		</div>
+		<!-- Indice -->
+		<div class="Indice">
 			<ul>
-				<li><a data-icon="gear" href="">One</a></li>
-				<li><a href="">Two</a></li>
+				<li><a href="Content-1">Incluir Js en Web</a></li>
+					<ul>
+						<li><a href="Content-1-1">Delimitado por etiquetas</a></li>
+						<li><a href="Content-1-2">Javascript externo</a></li>
+					</ul>
+				<li><a href="Content-2">Tipos de Datos</a></li>
+				<li><a href="Content-3">Operadores lògicos</a></li>
+				<li><a href="Content-4">Arrays</a></li>
+				<li><a href="Content-5">Funciones</a></li>
 			</ul>
 		</div>
 		<!-- Main -->
 		<div data-role="main" class="ui-content">
 			<h2>Aca va el contenido</h2>
+			<div class="Content 1" id="Content-1">
+				<h2>Incluir JS en Web</h1>
+				  <p>Delimitado por etiqueta</p>
+				  <p>Javascript externo</p>
+
+			</div>
 		</div>
 	</div>
 </body>
