Se empieza a trabajar el indice

--- a/indice.html
+++ b/indice.html
@@ -22,7 +22,7 @@
 			<ul data-role="listview" data-inset="true">
 				<li data-role="list-divider">Menù</li>
 				<li>
-					<a href="indice.html" target="_self">Indice</a>
+					<a href="index.html" target="_self">Indice</a>
 				</li>
 				<li>
 					<a href="index.html" target="_self">Acerca</a>
@@ -33,8 +33,28 @@
 			</ul>
 			<a href="#pageone" data-rel="close" data-role="button">Cerrar</a>
 		</div>
+		<!-- Indice -->
+		<div class="Indice">
+			<ul>
+				<li><a href="Content-1">Incluir Js en Web</a></li>
+					<ul>
+						<li><a href="Content-1-1">Delimitado por etiquetas</a></li>
+						<li><a href="Content-1-2">Javascript externo</a></li>
+					</ul>
+				<li><a href="Content-2">Tipos de Datos</a></li>
+				<li><a href="Content-3">Operadores lògicos</a></li>
+				<li><a href="Content-4">Arrays</a></li>
+				<li><a href="Content-5">Funciones</a></li>
+			</ul>
+		</div>
+		<!-- Main -->
 		<div data-role="main" class="ui-content">
-
+			<h2>Aca va el contenido</h2>
+			<div class="Content 1" id="Content-1">
+				<h2>Incluir JS en Web</h1>
+				  <p>Delimitado por etiqueta</p>
+				  <p>Javascript externo</p>
+			</div>
 		</div>
 	</div>
 </body>
