Se definio bien la portada

--- a/index.html
+++ b/index.html
@@ -33,8 +33,16 @@
 			</ul>
 			<a href="#pageone" data-rel="close" data-role="button">Cerrar</a>
 		</div>
+		<!---Contenido--->
 		<div data-role="main" class="ui-content">
-
+			<div data-role="fieldcontain"></div>
+			<a href=""><img src="images/js.png" width="100%" alt=""></a>
+			<div data-role="fieldcontain"></div>
+			<div style="text-align:center">
+				<h4>Manual de Javascript:</h4>
+				<p>Encuentra referencia del lenguaje rapidamente</p>
+				<p style="font-size:small text-shadow: 0px">Para empezar ve al indice</p>
+			</div>
 		</div>
 	</div>
 </body>
