--- a/indice.html
+++ b/indice.html
@@ -34,17 +34,14 @@
 			<a href="#pageone" data-rel="close" data-role="button">Cerrar</a>
 		</div>
 		<!-- Indice -->
-		<div class="Indice">
-			<ul>
-				<li><a href="Content-1">Incluir Js en Web</a></li>
-					<ul>
-						<li><a href="Content-1-1">Delimitado por etiquetas</a></li>
-						<li><a href="Content-1-2">Javascript externo</a></li>
-					</ul>
-				<li><a href="Content-2">Tipos de Datos</a></li>
-				<li><a href="Content-3">Operadores lògicos</a></li>
-				<li><a href="Content-4">Arrays</a></li>
-				<li><a href="Content-5">Funciones</a></li>
+		<div class="Indice ui-body">
+			<ul data-role="listview">
+				<li data-role="list-divider"><h1>Indice</h1></li>
+        <li><a href="#Content-1">Incluir Js en Web</a></li>
+				<li><a href="#Content-2">Tipos de Datos</a></li>
+				<li><a href="#Content-3">Operadores lògicos</a></li>
+				<li><a href="#Content-4">Arrays</a></li>
+				<li><a href="#Content-5">Funciones</a></li>
 			</ul>
 		</div>
 		<!-- Main -->
