Indice terminado, con redireccion a contenido

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 				<p>Encuentra referencia del lenguaje rapidamente</p>
 				<p style="font-size:small text-shadow: 0px">Para empezar ve al indice</p>
 			</div>
+			<div id="mentiras"></div>
 		</div>
 	</div>
 </body>
